--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advanced-note-app",
+  "name": "library-management-system",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
