--- a/package.json
+++ b/package.json
@@ -17,20 +17,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "lint": "^0.8.19",
     "mongoose": "^8.15.2",
-    "validator": "^13.15.15",
-    "zod": "^3.25.67"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/validator": "^13.15.2",
-    "chalk": "^5.4.1",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
