--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "assignment-3",
+  "name": "library-management-system",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist/server.js",
+    "start:prod": "nodemon ./dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "lint": "npx eslint .",
-    "lint:fix": "npx eslint . --fix"
+    "lint:fix": "npx eslint . --fix",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "type": "commonjs",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0",
+    "mongoose": "^8.15.2",
     "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/express": "^5.0.3",
+    "@types/node": "^24.0.3",
     "@types/validator": "^13.15.2",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
+    "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
     "typescript-eslint": "^8.34.1"
   }
